app/[locale]/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --font-sans: var(--font-inter);
    --font-arabic: var(--font-noto-kufi-arabic);
    --font-english: var(--font-inter);
    /* --font-mono: var(--font-geist-mono); */
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-info: var(--info);
    --color-info-foreground: var(--info-foreground);
    --color-success: var(--success);
    --color-success-foreground: var(--success-foreground);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-skeleton-foreground: var(--skeleton);
    --color-skeleton: var(--skeleton);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);
    /* --radius-sm: 0px;
    --radius-md: 0px;
    --radius-lg: 0px;
    --radius-xl: 0px; */
}

:root {
    --radius: 0.625rem;
    --background: oklch(1 0 0);
    --foreground: oklch(0.145 0 0);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.145 0 0);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.145 0 0);
    --primary: oklch(0.205 0 0);
    --primary-foreground: oklch(0.985 0 0);
    --secondary: oklch(0.97 0 0);
    --secondary-foreground: oklch(0.205 0 0);
    --muted: oklch(0.97 0 0);
    --muted-foreground: oklch(0.556 0 0);
    --accent: oklch(0.97 0 0);
    --accent-foreground: oklch(0.205 0 0);
    --skeleton: oklch(0.94 0 0);
    --skeleton-foreground: oklch(0.205 0 0);
    --destructive: oklch(0.577 0.245 27.325);
    --info: oklch(0.546 0.245 262.881);
    --info-foreground: oklch(0.985 0 0);
    --success: oklch(0.546 0.16 149.214);
    --success-foreground: oklch(0.985 0 0);
    --border: oklch(0.922 0 0);
    --input: oklch(0.95 0 0);
    --ring: oklch(0.708 0 0);
    --chart-1: oklch(0.646 0.222 41.116);
    --chart-2: oklch(0.6 0.118 184.704);
    --chart-3: oklch(0.398 0.07 227.392);
    --chart-4: oklch(0.828 0.189 84.429);
    --chart-5: oklch(0.769 0.188 70.08);
    --sidebar: oklch(0.985 0 0);
    --sidebar-foreground: oklch(0.145 0 0);
    --sidebar-primary: oklch(0.205 0 0);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.97 0 0);
    --sidebar-accent-foreground: oklch(0.205 0 0);
    --sidebar-border: oklch(0.922 0 0);
    --sidebar-ring: oklch(0.708 0 0);
}

.dark {
    --background: oklch(0.145 0 0);
    --foreground: oklch(0.985 0 0);
    --card: oklch(0.205 0 0);
    --card-foreground: oklch(0.985 0 0);
    --popover: oklch(0.205 0 0);
    --popover-foreground: oklch(0.985 0 0);
    --primary: oklch(0.922 0 0);
    --primary-foreground: oklch(0.205 0 0);
    --secondary: oklch(0.269 0 0);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.269 0 0);
    --muted-foreground: oklch(0.708 0 0);
    --accent: oklch(0.269 0 0);
    --accent-foreground: oklch(0.985 0 0);
    --skeleton: oklch(0.269 0 0);
    --skeleton-foreground: oklch(0.985 0 0);
    --destructive: oklch(0.704 0.191 22.216);
    --info: oklch(0.623 0.214 259.815);
    --info-foreground: oklch(0.985 0 0);
    --success: oklch(0.627 0.194 149.214);
    --success-foreground: oklch(0.985 0 0);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.556 0 0);
    --chart-1: oklch(0.488 0.243 264.376);
    --chart-2: oklch(0.696 0.17 162.48);
    --chart-3: oklch(0.769 0.188 70.08);
    --chart-4: oklch(0.627 0.265 303.9);
    --chart-5: oklch(0.645 0.246 16.439);
    --sidebar: oklch(0.205 0 0);
    --sidebar-foreground: oklch(0.985 0 0);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.269 0 0);
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.556 0 0);
}

@layer base {
    * {
        @apply border-border outline-ring/50;
    }

    body {
        @apply bg-background text-foreground;
    }
}

/* custom defaults */
button,
a {
    cursor: pointer;
}

/* .responsive {
  width: 100%;
  margin-inline: auto;
}
@media (width >=1280px) {
  .responsive {
    width: 1200px;
    margin-inline: auto;
  }
} */
@layer utilities {
    .responsive {
        width: 100%;
        margin-inline: auto;
    }

    @media (width >=1280px) {
        .responsive {
            width: 1200px;
            margin-inline: auto;
        }
    }
    /* -mx-4 px-4 xl:-mx-32 -my-20 py-20 */
    .irresponsive {
        margin-inline: -16px;
        margin-block: -80px;
        padding-inline: 16px;
        padding-block: 80px;
    }
    @media (width >= 1280px) {
        .irresponsive {
            margin-inline: -128px;
        }
    }
    h1 {
        @apply scroll-m-20 text-xl font-medium tracking-tight sm:text-2xl md:text-3xl;
    }
    h2 {
        @apply scroll-m-20 text-lg font-medium tracking-tight sm:text-xl md:text-2xl;
    }
    h3 {
        @apply scroll-m-20 text-base font-medium tracking-tight sm:text-lg md:text-xl;
    }
    h4 {
        @apply scroll-m-20 text-sm font-medium tracking-tight sm:text-base md:text-lg;
    }
    h5 {
        @apply scroll-m-20 text-xs font-medium tracking-tight sm:text-sm md:text-base;
    }
    p {
        @apply text-sm leading-7 sm:text-base min-h-lh;
    }
    blockquote {
        @apply mt-4 border-s-4 p-2 sm:mt-6 bg-primary-foreground;
    }
}

